--- a/src/styles/elisse.styl
+++ b/src/styles/elisse.styl
@@ -37,6 +37,7 @@ header .glyphicon:hover
 /* disable table styling */
 .btn-group
     display: block
+    margin: base-md 0
 
 /* force select button to span full-width */
 .btn-group .select-list
